frontend/src/css/lib-content-view.css
.main-panel {
  overflow: hidden;
}

.cur-view-content.lib-content-container {
  padding: 0;
  background-color: #fff;
  position: absolute;
  top: 48px;
  z-index: 2;
  width: 100%;
  height: calc(100% - 48px);
  border-top: 1px solid #e8e8e8;
  transform: translateZ(10px);
}

.view-mode-container {
  display: flex;
  flex-direction: row !important;
  overflow: hidden !important;
  padding-left: 0 !important;
  min-height: 0;
}

.dir-column-view {
  display: flex;
  width: 100%;
  position: relative;
}

.dir-content-nav {
  flex: 0 0 25%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  background-color: #fff;
  border-right: 1px solid #eee;
}

.dir-content-nav:hover {
  overflow: auto;
}

.dir-content-main {
  flex: 1 0 74.5%;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

/*tree view */
.tree-view {
  margin-left: -12px;
  padding: 12px 12px 12px 0;
  line-height: 1.5;
  flex: 1;
  border: 1px solid rgba(69, 170, 242, 0);
}

.tree-view-drop {
  border: 1px solid rgba(69, 170, 242);
}

.tree-view-drop::before {
  border-left: 1px solid rgba(69, 170, 242);
  content: '';
  margin-left: 8px;
  height: calc(100% + 24px);
  display: block;
  margin-top: -12px;
  float: left;
}

.tree-node-inner {
  position: relative;
  height: 28px;
  padding: 2px;
  cursor: pointer;
  line-height: 1.625;
}

.tree-node-inner-hover {
  background-color: #f0f0f0;
  border-radius: 0.25rem;
}

.tree-node-inner .tree-node-text {
  padding-left: 2.8rem;
  width: calc(100% - 1.5rem);
  font-size: 14px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 24px;
}

.tree-node-inner .left-icon {
  position: absolute;
  display:flex;
  align-items:center;
  top: 2px;
  left: 0;
  padding-left: 1.5rem;
}

.folder-toggle-icon {
  position: absolute;
  left: 0;
  color: #666666;
  line-height: 1.625;
  width: 1.5rem;
  display: flex;
  align-content: center;
  justify-content: center;
}

.tree-node-drop {
  background-color: rgb(255, 239, 178);
}

.tree-node-icon {
  display: inline-block;
  width: 1rem;
  text-align: center;
  color: #666666;
}

.tree-node-inner .right-icon {
  position: absolute;
  top: 2px;
  right: 0.5rem;
  bottom: 0;
  width: 1rem;
  color: #666666;
  z-index: 2;
  font-size: 0.8125rem;
  text-align: center;
}

.tree-node-inner .right-icon i {
  width: 100%;
  height: 100%;
  vertical-align: middle;
  font-size: 0.8125rem;
  line-height: 1.625rem !important;
  color: #666666;
}

.tree-node-hight-light {
  border-radius: 4px;
  background-color: #f5f5f5 !important;
}

.tree-node-hight-light::before {
  content: '';
  position: absolute;
  display: block;
  width: 4px;
  height: 24px;
  left: -8px;
  top: 2px;
  background-color: #FF8000;
  border-radius: 2px;
  z-index: 0;
}

.parent-path {
  position: relative;
}

.parent-path .form-text {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  margin-top: 0;
  margin-left: 0.25rem;
  font-size: 0.9375rem;
}

/* file layout */
.dir-content-main .wiki-page-container {
  padding: 0 1rem 1.25rem;
  display: flex;
  flex: 1;
}

.dir-content-main .wiki-page-content {
  flex: 1;
  width: 100%;
}

/* wiki-page-content children */
.dir-content-main .wiki-open-file {
  width: 40px;
  height: 40px;
  line-height: 40px;
  text-align: center;
  font-size: 16px;
  border-radius: 50%;
  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
  user-select: none;
  border: none;
  right: 10px;
  bottom: 10px;
  color: #999;
  z-index: 1050;
  background-color: #fff;
  cursor: pointer;
}

.dir-content-main .wiki-open-file:hover {
  background-color: #f6f6f6;
}

.dir-content-main .sf-slate-viewer-scroll-container {
  padding: 0;
  background-color: #fff;
  border: none;
  overflow: inherit;
}

.dir-content-main .sf-slate-viewer-article-container {
  display: block;
  width: 100%;
}

.readonly-tip-message {
  display: flex;
  padding: 0.25rem 0;
  background-color: #FEFBDC;
  justify-content: center;
  align-items: center;
}

.op-btn {
  background: #fff;
  border: 1px solid #dbdbdb;
  border-radius: 3px;
  height: 32px;
  padding: 0 .5rem;
}

.op-btn:hover {
  background: #f5f5f5;
}

.dir-view-path .cur-view-path-btn {
  margin-left: -4px;
}

.dir-view-path .path-item {
  min-width: 0; /* overwrite some styles */
  padding: 0 6px;
  font-size: 1rem;
  color: inherit;
  border-radius: 3px;
  text-decoration: none;
  display: flex;
  align-items: center;
}

.dir-view-path .path-item:hover {
  background: #efefef;
}

.dir-view-path .path-item-dropdown-toggle {
  color: #666;
}

.dir-view-path .path-split {
  padding: 0 2px;
}

